# polymarket-news-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  backtest_log.json  demo_log.txt  docker-compose.yml  pyproject.toml
config/: markets.yaml  settings.py
dashboard/: index.html  package-lock.json
dashboard/src/: App.tsx  types.ts
dashboard/src/components/: DashboardGrid.css  DashboardGrid.tsx  SummaryStrip.tsx  TopBar.css  TopBar.tsx
dashboard/src/components/panels/: ActivityLog.tsx  CalibrationChart.tsx  DecisionPanel.tsx  NewsFeed.tsx  (+7 more)
dashboard/src/context/: AgentContext.tsx
dashboard/src/data/: mockSnapshot.ts  signalDefinitions.ts
dashboard/src/hooks/: useAgentSocket.ts
dashboard/src/styles/: global.css  tokens.css
docs/: methodology.md
scripts/: demo_event.py  run_agent.py  run_backtest.py  run_dashboard.py
src/api/: server.py  state.py
src/api/static/: app.js  index.html  style.css
src/dashboard/: PolymarketDashboard.jsx  index.html  main.jsx  package-lock.json  package.json
src/execution/: clob.py  orders.py  paper.py
src/fusion/: bayesian.py  calibration.py  ensemble.py
src/ingestion/: gdelt.py  metrics.py  polymarket.py  reddit.py  rss.py  wikipedia.py
src/monitor/: dashboard.py
src/reasoning/: decomposer.py  llm_client.py  prompts.py
src/risk/: kelly.py  portfolio.py
src/signals/: cross_market.py  microstructure.py  news_relevance.py  resolution.py
tests/: test_bayesian.py  test_cross_market.py  test_ensemble.py  test_kelly.py  test_microstructure.py  test_news_relevance.py  test_portfolio.py
